--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,7 +1,225 @@
-h1 {
-  color: purple;
-  font-size: 100px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex; }
+/* Header */
+.main-header {
+	width: 90%;
+	margin: 0 auto;
+	font-family: "Segoe UI","wf_segoe-ui_normal","Arial",sans-serif;
+}
+
+/* LOGO */
+	img.logo {
+		float: left;
+		margin-top: 13px;
+		width: 108px;
+		height: 23px;
+	}
+/* END LOGO */
+	
+/* MAIN MENU */
+	nav.main-menu {
+		float: left;
+		margin: 0 0 0 18px;
+	}
+		.main-menu ul {
+			padding: 0;
+			margin: 0;
+		}
+			.main-menu>ul>li {
+				float: left;
+				list-style-type: none;
+				height: 48px;
+				line-height: 48px;
+				vertical-align: middle;
+			}
+				.main-menu>ul>li>a {
+					text-decoration: none;
+				    padding: 0 1.5em;
+			     	display: block;
+			     	height: 48px;
+		     	    color: #2F2F2F;
+		     	    transition: background-color ease-out .5s;
+				}
+				.main-menu li a:hover {
+		    		background-color: #f2f2f2;
+				}
+/*VERTICAL MENU*/
+			.active-li {
+				background-color: #f2f2f2;
+			}
+				.main-menu li ul {
+					display: none;
+				}
+				.main-menu li ul.active {
+					display: block;
+					width: 238px;
+					position: absolute;
+					top: 48px;
+					padding: 0 0 8px;
+					background: #f2f2f2;
+					border-left: 1px solid rgba(0,0,0,0.05);
+					border-bottom: 1px solid rgba(0,0,0,0.3);
+					border-right: 1px solid rgba(0,0,0,0.1);
+					box-sizing: border-box;
+				}
+					.active li{
+						list-style-type: none;
+					}
+				.active>li>a {
+					display: block;
+				    color: #2F2F2F;
+			        line-height: 20px;
+			        padding: 17px 24px;
+			        text-decoration: none;
+				}
+				/*.active>li>a:before {
+					display: block;
+					width: 1em;
+					height: 1em;
+					font-family: "shell-icons";
+					font-style: normal;
+					font-weight: normal;
+					line-height: 1.1;
+					-webkit-font-smoothing: antialiased;
+					-moz-osx-font-smoothing: grayscale;
+					content: "";
+				}*/
+				.active>li>a:hover {
+					text-decoration: underline;
+				}
+/*END VERTICAL MENU*/
+/*SIGNES NEAR MENU ELEMENTS*/
+				.main-menu>ul>li>a:after {
+					vertical-align: middle;
+					content: "";
+				    margin-left: 1.3em;
+					width: 1em;
+					height: 1em;
+					font-family: "shell-icons";
+					font-style: normal;
+					font-weight: normal;
+					line-height: 1.1;
+					-webkit-font-smoothing: antialiased;
+					-moz-osx-font-smoothing: grayscale;
+					font-size: 6px;
+					font-weight: bold;
+				}
+				.main-menu li:last-child a:after {
+					content: "";
+				}
+/*END SIGNES NEAR MENU ELEMENTS*/
+
+	.right-header {
+		float: right;
+	}
+		.head-search {
+			position: relative;
+			float: left;
+			margin: 7px 10px 0 0;
+			border: 1px solid #A9A9A9;
+		}
+			.head-search input {
+				width: 267px;
+				padding: 0 10px;	
+				height: 34px;
+			    outline: 0;
+				border: none;
+			}
+			.head-search button {
+				position: absolute;
+				top: 0;
+				right: 0;
+			    color: #7f7f7f;
+				width: 36px;	
+				height: 34px;
+				padding: 0;
+				border: none;
+				background-color: white;
+				font-size: 17px;
+			}
+			.head-search button:before {
+				display: block;
+				height: 1em;
+				font-family: "shell-icons";
+				font-style: normal;
+				font-weight: normal;
+				line-height: 1.1;
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+				content: "";
+			}
+	.cart {
+		float: left;
+	}
+		.cart a {
+			text-decoration: none;
+			display: inline-block;
+		    height: 48px;
+		    vertical-align: middle;
+		    padding: 17px 10px;
+		    margin-left: 6px;
+		    font-size: 16.9px;
+	        color: #7f7f7f;
+	        box-sizing: border-box;
+	        transition: background-color ease-out .5s;
+		}
+			.cart span {
+				float: left;
+    			line-height: 17px;
+				font-size: 0.663em;
+				margin-left: 3px;
+			}
+			.cart a:before {
+				display: block;
+				width: 1em;
+				height: 1em;
+				font-family: "shell-icons";
+				font-style: normal;
+				font-weight: normal;
+				line-height: 1.1;
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+				content: "";
+				float: left;
+			}
+			.cart a:hover {
+				background-color: #f2f2f2;
+			}
+	.login {
+		display: inline-block;
+		text-decoration: none;
+		float: left;
+		height: 48px;
+		line-height: 48px;
+		padding: 0 12px 0 10px;
+		font-size: 0.85em;
+	    color: #505050;
+	    transition: background-color ease-out .5s;
+	}
+	.login:hover {
+		background-color: #f2f2f2;
+		color: #1E90FF;
+	}
+/* END MAIN MENU */	
+.clearfix::after {
+    display: table;
+    content: "";
+    clear: both;
+}
+
+@font-face{
+    font-family: 'Segoe UI';
+    src:url('http://i.s-microsoft.com/fonts/Segoe-UI/Cyrillic/Light/latest.eot');
+    src:url('http://i.s-microsoft.com/fonts/Segoe-UI/Cyrillic/Light/latest.eot?#iefix') format('embedded-opentype'),
+           url('http://i.s-microsoft.com/fonts/Segoe-UI/Cyrillic/Light/latest.woff') format('woff'),
+           url('http://i.s-microsoft.com/fonts/Segoe-UI/Cyrillic/Light/latest.ttf') format('truetype'),
+           url('http://i.s-microsoft.com/fonts/Segoe-UI/Cyrillic/Light/latest.svg#web') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face{
+    font-family: 'shell-icons';
+    src:url('../fonts/shell-icons-0.4.0.eot');
+    src:url('../fonts/shell-icons-0.4.0.eot?#iefix') format('embedded-opentype'),
+           url('../fonts/shell-icons-0.4.0.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
